Replace java Streams with for loops in hot methods. Replace ImmutableCollections with unModifiableCollections in framework internal data structures